# tetra-nerf

./: CMakeLists.txt  README.md
cmake/: FindOptiX.cmake  FindTorch.cmake  RunBin2C.cmake
